# fsegatz.github.io

./: .gitignore  CMakeLists.txt  commands  index.html  index.js  requirements.txt
.github/workflows/: action.yml  build-qt-wasm.yml
data/: continuous_deployment_of_qt_wasm_application.md  template.md
main/: CMakeLists.txt  mainwindow.cpp
release/: CMakeCache.txt.prev  cmake_install.cmake
release/.cmake/api/v1/reply/: cache-v2-024bf211b9f56dc97974.json  cache-v2-486668076b986507b9ce.json  cmakeFiles-v1-2921c0ef5ca1ad44aede.json  codemodel-v2-f333bc9e2dc9ef5bbab2.json  directory-widgets.mainwidget-Release-5816704a21e36a57c9b7.json  index-2022-11-03T10-53-54-0259.json  target-index-Release-3889c6f4bf5aeb1253ef.json  target-index-Release-7f0ea2056d6d7ca54c92.json  target-index_autogen-Release-8b18b0b1480d865c05e4.json  target-index_autogen-Release-e0a449e57de6397ae56e.json  target-mainwidget_autogen-Release-a0c16343c9fd4043add2.json  target-menuwidget-Release-0f07388c988edede46b8.json  target-menuwidget_autogen-Release-584d2e87045470c073fd.json
release/.cmake/api/v1/reply.prev/: cmakeFiles-v1-99d485df67f199f39984.json  codemodel-v2-4541bafafc41bc1ffad8.json  codemodel-v2-b2caf012be3afa532f0c.json  directory-widgets-Release-572ec20ac64a16531fe5.json  directory-widgets.menuwidget-Release-042ca0f81cc666882563.json  index-2022-11-02T22-50-25-0172.json  index-2022-11-03T10-53-48-0528.json  target-index-Release-acdd90ef02aedfdc42e0.json  target-index_autogen-Release-169e14aa4127e03c8c7c.json  target-mainwidget-Release-ebb35ba9329a03dc056c.json
release/.qtc_clangd/: compile_commands.json
release/.qtc_clangd/.cache/clangd/index/: QApplication.07B93AC2B5659125.idx  QHBoxLayout.959CE40069C126E9.idx  QMainWindow.D2A2BCB04F3E7BD0.idx  QWidget.5E49D768DE78EAD9.idx  (+229 more)
release/main/: cmake_install.cmake  index.html  index.js
release/main/index_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
release/widgets/: cmake_install.cmake
release/widgets/mainwidget/: cmake_install.cmake
release/widgets/menuwidget/: cmake_install.cmake
release/widgets/menuwidget/menuwidget_autogen/: moc_predefs.h  mocs_compilation.cpp
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  markdownFileReader.cpp  markdownFileReader.h  test_markdownFileReader.cpp
src/main/: CMakeLists.txt  mainwindow.cpp
src/widgets/: CMakeLists.txt
src/widgets/aboutmewidget/: CMakeLists.txt  aboutmewidget.cpp  aboutmewidget.h  resources.qrc
src/widgets/mainwidget/: CMakeLists.txt  mainwidget.cpp
src/widgets/menuwidget/: CMakeLists.txt  menuwidget.cpp  menuwidget.h
utils/: windows_helper.py  windows_wasm_helper.py
widgets/aboutmewidget/: CMakeLists.txt  aboutmewidget.cpp  aboutmewidget.h  resources.qrc
widgets/mainwidget/: CMakeLists.txt  mainwidget.cpp
widgets/menuwidget/: CMakeLists.txt  menuwidget.cpp  menuwidget.h
(+2 files in other folders)
